refactor: clear code